--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,11 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Research Lab
-email: your-email@domain.com
+title: Robot Perception Lab
+email: shan.luo@kcl.ac.uk
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: ""
+  This is the website of the Robot Perception Lab led by Dr Shan Luo at King's College London.
+baseurl: "shanluo.github.io/ViTacWorkshops/rpl-website"
 url: ""
 
 include:
