--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ title: Robot Perception Lab
 email: shan.luo@kcl.ac.uk
 description: > # this means to ignore newlines until "baseurl:"
   This is the website of the Robot Perception Lab led by Dr Shan Luo at King's College London.
-baseurl: "rpl-website"
-url: "rpl-website"
+baseurl: "/rpl-website"
+url: ""
 
 include:
   - .htaccess
